# cpsc534l-project

code/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  main.cmake  main.cpp  src.cmake  test.cmake
code/main/: argparse.h  headhunter.cpp  run_greedy_mc.cpp  run_greedy_rs.cpp  run_mc_mc.cpp  run_mc_rs.cpp  run_rs_mc.cpp  run_whole_team_greed_ratio.cpp
code/res/: dblp_example1.tf  dummy_example1.tf  dummy_ignore_cost.tf  dummy_ignore_coverage.tf  example1.tf
code/scripts/: .gitignore  dblp_types.py  parse_dblp.py
code/scripts/dblp/: dblp_utils.py  reparse_dblp.py
code/src/: constants.h  debug.h.in  instance.h  messages.h  typedefs.h
code/src/cost/: cost_calculator.h  edge_weight_summer.cpp  edge_weight_summer.h  team_inclusion_cost_adder.cpp  team_inclusion_cost_adder.h
code/src/function/: cost_over_util.h  cost_wrapper.h  min_evaluator.h  set_function.h  util_wrapper.h
code/src/io/: instance_loader.cpp  instance_loader.h
code/src/network/: graph.cpp  graph.h  node.h  skill.h
code/src/optimize/: brute_force_minimizer.cpp  brute_force_minimizer.h  constraint.h  greed_ratio_minimizer.cpp  greed_ratio_minimizer.h  greed_ratio_top_k_solver.cpp  greed_ratio_top_k_solver.h  greedy_minimizer.cpp  greedy_minimizer.h  hiring_budget_constraint.h  minimizer.h  monte_carlo_minimizer.cpp  (+4 more)
code/test/: dummy_ignore_cost_test.cpp  dummy_ignore_cost_test.h  greed_ratio_minimizer_test.cpp  greed_ratio_minimizer_test.h  greedy_minimizer_test.cpp  greedy_minimizer_test.h  instance_loader_test.cpp  instance_loader_test.h  main.cpp  node_set_test.cpp
(+52 files in other folders)
